data/user/terminal_log.txt
>>> 5+6
11
>>> 5dfdf
File "", line 1
5dfdf
^
SyntaxError: invalid syntax
>>> dfd2
Traceback (most recent call last):
File "", line 1, in 
NameError: name 'dfd2' is not defined
>>> 5+6
11
>>> 7+6
13
>>> print("df")
df
>>> +
File "", line 1
+
^
SyntaxError: invalid syntax
>>> 5 + 33
38
>>> 5+6
11
>>> 5+6
11
>>> def
File "", line 1
def
^
SyntaxError: invalid syntax
>>> print("df")
File "", line 2
print("df")
^
SyntaxError: invalid syntax
>>> print("df")
df
>>> a = 5
>>> b = 6
>>> print(a+b)
11